# Duckdb-dbt-end-to-end-project

./: .gitignore  Makefile  README.md  duckdb_version.txt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
ingestion/: awsFuns.py  bigquery.py  models.py  pipeline.py
test/ingestion/: test_models.py
transform/pypi_metrics/: .user.yml  dbt_project.yml  dev.duckdb
transform/pypi_metrics/macros/: export_partition_data.sql
transform/pypi_metrics/models/: pypi_daily_stats.sql  schema.yml  sources.yml
