[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "duckdb>=1.3.2,<2.0.0",
    "google-cloud-bigquery>=3.35.1,<4.0.0",
    "google-auth>=2.40.3,<3.0.0",
    "google-cloud-bigquery-storage>=2.32.0,<3.0.0",
    "pyarrow>=21.0.0,<22.0.0",
    "pandas>=2.3.1,<3.0.0",
    "fire>=0.7.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "pytest (>=8.4.1,<9.0.0)",
    "ruff (>=0.12.8,<0.13.0)",
    "db-dtypes (>=1.4.3,<2.0.0)",
    "dbt-duckdb (>=1.9.4,<2.0.0)",
    "dbt-core (>=1.10.8,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"